--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
 
     <!-- main-visual用のdiv -->
     <div class="main-visual">
-      <div class="main-visual-content"></div>
+      <div class="main-visual-content">
+          <!-- pタグ（と文字）を追加 -->
+        <p class="main-visual-text">
+          The world is a book and those who do not travel read only one page.
+        </p>
+        <p class="main-visual-text">
+          The world is a ßbook<br />
+          and those who do not travel<br />
+          read only one page.
+        </p>
+        <p class="main-visual-name">
+          St. Augustine
+        </p>
+      </div>
     </div>
 
      <!-- main用のdiv -->
