--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- FontAwesomeの読み込み -->
     <script src="https://kit.fontawesome.com/f43c3ce84d.js" crossorigin="anonymous"></script>"
     <!-- CSSファイルの読み込み -->
@@ -73,6 +74,7 @@
         </div>
        </div>
 
+      <div class="blog-box">
        <div class="blog-item">
          <img class="blog-image" src="img/desert.jpg" />
          <section class="blog-text">
@@ -88,7 +90,9 @@
          </section>
         </div>
        </div>
+      </div>
 
+      <div class="blog-box">
        <div class="blog-item">
          <img class="blog-image" src="img/sunset.jpg" />
          <section class="blog-text">
@@ -103,7 +107,9 @@
          </section>
         </div>
        </div>
+      </div>
 
+      <div class="blog-box">
        <div class="blog-item">
          <img class="blog-image" src="img/italy.jpg" />
          <section class="blog-text">
@@ -118,7 +124,9 @@
          </section>
         </div>
        </div>
+      </div>
 
+      <div class="blog-box">
        <div class="blog-item">
          <img class="blog-image" src="img/asia.jpg" />
          <section class="blog-text">
@@ -133,6 +141,7 @@
          </section>
         </div>
        </div>
+      </div>
 
         <div class="pagination">
           <p><<</p>
